# nigte_lite

./: .gitignore  Cargo.toml  LICENSE  memory.x  openocd.gdb
.cargo/: config.toml
.fleet/: run.json
3d/: ._BOSL  box.scad
kicad/: CN5711.lib  SOIC-8-G.kicad_mod  fp-info-cache  munlite.kicad_pcb  munlite.kicad_prl  munlite.kicad_pro  munlite.kicad_sch  munlite_v1.kicad_pcb  munlite_v1.kicad_prl  munlite_v1.kicad_pro  munlite_v1.kicad_sch  munlite_v2.kicad_sch
kicad/grb/: munlite_POS_All.txt  munlite_POS_bot_Virtual.txt  munlite_POS_top_SMD.txt  munlite_POS_top_THD.txt  munlite_POS_top_Virtual.txt
src/: main.rs
