[package]
authors = ["marvil"]
edition = "2021"
readme = "README.md"
name = "nigte_lite"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-probe = { version = "0.2", features = ["print-rtt"] }
cortex-m-rtic = "1.1.2"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f030x4", "stm32f030"] }
rtt-target =  { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
fugit = "0.3.5"
stm32f0 = "0.14"
nb = "1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "nigte_lite"
test = false
bench = false

[profile.dev]
codegen-units = 1 # better optimizations
debug = 1
lto = false # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations
