[package]
authors = ["marvil"]
edition = "2018"
readme = "README.md"
name = "g0_led-j6"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.3"
stm32l0 = "0.13.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
stm32l0xx-hal = { version="0.9.0",features = ['rt',"stm32l0x1","flash-32","ram-8","lqfp32","io-STM32L031","eeprom-1024"] }# For the stm32g031k8 mc  ,version = "0.1.5"
rtt-target =  { version = "0.3.1", features = ["cortex-m"] }
fixedvec = "*"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "g0_led-j6"
test = false
bench = false

[profile.dev]
codegen-units = 1 # better optimizations
debug = 1
lto = false # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations
