[package]
authors = ["marvil"]
edition = "2021"
readme = "README.md"
name = "nigte_lite"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.5.0"
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
stm32g0xx-hal = {version="0.1.5", features = ["rt", "stm32g030"] }# For the stm32g031k8 mc version = "0.1.5"
rtt-target =  { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
fugit = "0.3.6"
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = ["nightly", "defmt", "time-driver-any", "stm32g030f6", "memory-x", "unstable-pac", "exti"]  }
embassy-sync = { version = "0.4.0", path = "../../embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.3.3", path = "../../embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", path = "../../embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

defmt = "0.3"
defmt-rtt = "0.4"
# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "nigte_lite"
test = false
bench = false

[profile.dev]
codegen-units = 1 # better optimizations
debug = 1
lto = false # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
debug = 1 # symbols are nice and they don't increase the size on Flash
lto = false # better optimizations
